--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,12 @@
 /* ---------------------------------- Design général ---------------------------------------- */
 $Sitecolor:rgb(119, 116, 69);
 //$Police: 'UglyQua', "Acme-Regular", sans-serif;  ;
-$Police: 'UglyQua';
+$Police: 'Acme-Regular';
+
+p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 18px;
+}
 
 html, body, #bloc_page { 
     margin:0;
@@ -10,18 +15,12 @@ html, body, #bloc_page {
 body {
     background: url(Ressources/Fond.jpeg);
     background-size: cover;
-    background-attachment: fixed;
+    background-repeat: no-repeat;
+    //background-attachment: fixed;
     margin: 0px;
     text-align: center;
     display: flex;
     flex-direction: column;
-}
-
-@media screen and (max-width: 1000px) {
-  #bloc_page { 
-    display: flex;
-    justify-content: space-around;
-  }
 }
 
 .btnPerso {
@@ -31,7 +30,7 @@ body {
   width: auto;
   padding:5px;
   border-radius: 1em;
-  background-color: rgba(128, 128, 128, 0.363);
+  background-color: #7e8d37;
   cursor: pointer;
   font-size: 2rem;
   font-family: $Police;
@@ -44,26 +43,14 @@ a:link, a:visited, a:hover, a:active {
 /* ----------------------------------- Bandeau ---------------------------------------------- */
 #bandeau {
     background-color: white;
-    height: 100px;
+    height: 50px;
     padding-top: 25px;
     padding-bottom: 25px;
-    @media screen and (max-width: 1000px) {
-    height: 100%;
-    background-color: white;
-    width: 200px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: -20px;
-    font-size: 30px;
-    }
 }
 
 #logo {
     position: absolute;
-    margin-top: -15px;
+    //margin-top: -15px;
     margin-left: 70px;
     @media screen and (max-width: 1000px) {
       margin-left: 0em;
@@ -77,24 +64,16 @@ a:link, a:visited, a:hover, a:active {
 #navigation ul {
     list-style: none;
     margin-left: 200px;
-    margin-top: 20px;
-    padding: 10px;
+    margin-top: 10px;
     display: flex;
     justify-content: space-around;
-    @media screen and (max-width: 1000px) {
-      margin-left: 0em;
-      margin-top: 70px;
-      flex-direction: column;
-      align-items: center;
-    }
-    @media screen and (max-height: 600px) {
-      margin-top: 25px;
-    }
+
 }
+
 .btn {
     cursor: pointer;
     font-family: $Police;
-    font-size: 40px;
+    font-size: 30px;
     color: black;
     transform: scale(1);
     transition: transform 200ms;
@@ -102,12 +81,17 @@ a:link, a:visited, a:hover, a:active {
       transform: scale(1.1) 
     }
     }
-    @media screen and (max-width: 1000px) {
-      padding-top: 25px;
-    }
+
+#Contact {
+  margin-left: 200px;
+}
 
 .active {
   color: $Sitecolor;
+}
+
+#main {
+  margin-top: 150px;
 }
 
 /* ------------------------- Accueil ------------------------------------- */
@@ -157,6 +141,30 @@ align-items: center;
 }
 
 /* -------------------------------- Le Village ---------------------------- */
+#village1 {
+  width: 800px;
+  margin: auto;
+  margin-bottom: 300px;
+}
+
+#village2 {
+margin:0 100px 0 100px;
+}
+
+#village3 {
+  margin-bottom: -30px;
+}
+
+#village4 {
+  margin-bottom: 0px; 
+}
+
+.legende {
+  font-weight: bold;
+  width: 450px;
+  margin: auto;
+}
+
 .menuVillage {
   margin: 50px 50px 200px 50px;
   display: flex;
