--- a/style.scss
+++ b/style.scss
@@ -106,6 +106,7 @@ a:link, a:visited, a:hover, a:active {
 }
 /* ----------------------------------- Bandeau ---------------------------------------------- */
 #bandeau {
+    z-index: 3;
     background-color: white;
     height: 50px;
     padding-top: 25px;
@@ -114,15 +115,8 @@ a:link, a:visited, a:hover, a:active {
 
 #logo {
     position: absolute;
-    //margin-top: -15px;
     margin-left: 70px;
-    @media screen and (max-width: 1000px) {
-      margin-left: 0em;
-      margin-top: -230px;
-    }
-    @media screen and (max-height: 500px) {
-      display: none;
-    }
+    z-index: 4;
 }
 
 #navigation ul {
@@ -131,11 +125,13 @@ a:link, a:visited, a:hover, a:active {
     margin-top: 10px;
     display: flex;
     justify-content: space-around;
+    z-index: 3;
 
 }
 
-.btn {
+.btn, .btnDemarche {
     cursor: pointer;
+    z-index: 3;
     font-family: $Police;
     font-size: 30px;
     color: black;
@@ -146,18 +142,6 @@ a:link, a:visited, a:hover, a:active {
     }
     }
 
-.btnDem {
-  cursor: pointer;
-  font-family: $Police;
-  font-size: 30px;
-  color: black;
-  transform: scale(1);
-  transition: transform 200ms;
-    &:hover {
-    transform: scale(1.1) 
-  }
-}
-
 #Contact {
   margin-left: 200px;
 }
@@ -165,10 +149,12 @@ a:link, a:visited, a:hover, a:active {
 .btnactive {
   color: $Sitecolor2;
   border-bottom: 3px solid $Sitecolor2;
+  z-index: 3;
 }
 
 .active {
   color: $Sitecolor2;
+  z-index: 3;
 }
 
 /* ------------------------- Accueil ------------------------------------- */
@@ -312,12 +298,14 @@ margin:0 100px 0 100px;
 
 /* ----------------------------------- Demarches ---------------------------- */
 #DEMARCHES {
+  z-index: 1;
+  opacity: 1;
+  position: relative;
+  top: -300px;
   background-color: rgb(255, 255, 255);
   margin-top: 0px;
-  //border: solid 1 px $Sitecolor;
-  //border-radius: 15px;
+  margin-bottom: -150px;
   padding: 10px;
-  //margin-top: 15px;
 }
 
 #etatcivil, #autreDem {
@@ -346,7 +334,7 @@ margin:0 100px 0 100px;
   }
 }
 
-#menuEtatCivil.closed, .menuDemarches.closed, #menuAutreDemarche.closed {
+#menuEtatCivil.closed, .menuDemarches.closed, #menuAutreDemarche.closed, .menuDemarches1.closed {
   display: none;
 }
 
