--- a/style.scss
+++ b/style.scss
@@ -61,7 +61,7 @@ body {
   font-family: $Police;
 }
 
-.btnPerso3 {
+.btnPerso3, .btnChoixDemarche {
   height: 1.5rem;
   padding: 10px;
   width: auto;
@@ -78,7 +78,7 @@ body {
   }
 }
 
-.btnPerso3 p {
+.btnPerso3 p, .btnChoixDemarche p {
   font-family: $Police;
   margin-top: 2px;
 }
@@ -131,7 +131,7 @@ a:link, a:visited, a:hover, a:active {
 
 .btn, .btnDemarche {
     cursor: pointer;
-    z-index: 3;
+    //z-index: 3;
     font-family: $Police;
     font-size: 30px;
     color: black;
@@ -308,7 +308,7 @@ margin:0 100px 0 100px;
   padding: 10px;
 }
 
-#etatcivil, #autreDem {
+#etatcivil, #servicePublic {
   display: flex;
 }
 
@@ -325,87 +325,40 @@ margin:0 100px 0 100px;
   justify-content: center;
 }
 
-#menuEtatCivil, .menuDemarches {
+#menuServicePublic {
   display: flex;
-  margin-top: 20px;
+  background-color: white;
+  margin-top: 100px;
   justify-content: space-around;
   + h2 {
     display: inline-block;
   }
 }
 
-#menuEtatCivil.closed, .menuDemarches.closed, #menuAutreDemarche.closed, .menuDemarches1.closed {
+#menuEtatCivil {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  margin-top: 100px;
+}
+
+.closed {
   display: none;
 }
 
-#Naissance {
+.line {
   display: inline-block;
-  height: 100px;
-  width: 100px;
-  background: url(Ressources/logoNaissance1.png) 0 0 no-repeat;
-  &:hover {
-    background-position: -100px 0px;
-    }
-  &:hover + h3 {
-        color : $Sitecolor;
-      }
 }
 
-#Naissance.active {
-  background-position: -100px 0px;
-  + h3 {
-  color : $Sitecolor;
-  }
-}
-
-#Deces {
+#btnFormulaire {
   display: inline-block;
-  height: 100px;
-  width: 100px;
-  background: url(Ressources/logoDeces2.png) 0 0 no-repeat;
-  &:hover {
-    background-position: -100px 0px;
-    }
-  &:hover + h3 {
-        color : $Sitecolor;
-      }
-}
-
-#Deces.active {
-  background-position: -100px 0px;
-  + h3 {
-  color : $Sitecolor;
-  }
-}
-
-#Mariage {
-  display: inline-block;
-  height: 100px;
-  width: 100px;
-  background: url(Ressources/logoMariage2.png) 0 0 no-repeat;
-  &:hover {
-    background-position: -100px 0px;
-    }
-  &:hover + h3 {
-        color : $Sitecolor;
-      }
-}
-
-#Mariage.active {
-  background-position: -100px 0px;
-  + h3 {
-  color : $Sitecolor;
-  }
-}
-
-#menuMariage {
-  width: 250px;
-  margin: auto;
-}
-
-#menuMariage .btnPerso3 {
+  width: 75px;
+  height: 20px;
   margin: 20px 0 20px 0;
 }
+
 /* ------------------------------------ Contact ----------------------------*/
 #CONTACT {
   margin-top: 75px;
@@ -420,7 +373,7 @@ margin:0 100px 0 100px;
     font-size: 30px;
   }
 
-input, textarea {
+#CONTACT input, #CONTACT textarea {
   font-family: $Police;
   font-size: 25px;
 }
