--- a/style.scss
+++ b/style.scss
@@ -61,7 +61,7 @@ body {
   font-family: $Police;
 }
 
-.btnPerso3, .btnChoixDemarche {
+.btnPerso3, .btnChoixDemarche, .btnChoixMairie {
   height: 1.5rem;
   padding: 10px;
   width: auto;
@@ -78,7 +78,7 @@ body {
   }
 }
 
-.btnPerso3 p, .btnChoixDemarche p {
+.btnPerso3 p, .btnChoixDemarche p, .btnChoixMairie p {
   font-family: $Police;
   margin-top: 2px;
 }
@@ -129,7 +129,7 @@ a:link, a:visited, a:hover, a:active {
 
 }
 
-.btn, .btnDemarche {
+.btn, .btnDemarche, .btnMairie {
     cursor: pointer;
     //z-index: 3;
     font-family: $Police;
@@ -296,6 +296,19 @@ margin:0 100px 0 100px;
   float: left;
 }
 
+/* --------------------------------- MAIRIE ------------------------------ */
+#MAIRIE {
+  z-index: 0;
+  opacity: 1;
+  position: relative;
+  top: -300px;
+  background-color: rgb(255, 255, 255);
+  margin-top: 0px;
+  margin-bottom: -150px;
+  padding: 10px;
+}
+
+
 /* ----------------------------------- Demarches ---------------------------- */
 #DEMARCHES {
   z-index: 1;
@@ -320,7 +333,7 @@ margin:0 100px 0 100px;
   margin-bottom: -10px;
 }
 
-#choixDemarche {
+#choixDemarche, #choixMairie {
   display: flex;
   justify-content: center;
 }
@@ -346,10 +359,6 @@ margin:0 100px 0 100px;
 
 .closed {
   display: none;
-}
-
-.line {
-  display: inline-block;
 }
 
 #btnFormulaire {
