--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,9 @@ $Police: 'Acme-Regular';
 h1 {
   font-family: $Police;
   font-size: 36px;
+  @media only screen and (max-width: 600px) {
+    font-size: 18px;
+    }
 }
 
 p {
@@ -14,25 +17,37 @@ p {
   font-size: 18px;
 }
 
-#village1 p {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 24px;
-}
-
 html, body, #bloc_page { 
     margin:0;
     height: 100%;
+    @media only screen and (max-width: 550px) {
+      width: auto;
+      margin: auto;
+      }
+    @media only screen and (max-width: 320px) {
+      width: 320px;
+      margin: auto;
+        }
 }
 
-body {
+#bloc_page {
     background: url(Ressources/Fond.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
-    //background-attachment: fixed;
     margin: 0px;
     text-align: center;
     display: flex;
     flex-direction: column;
+
+    @media only screen and (min-width: 1400px) {
+      width: 1400px;
+      margin: auto;
+    }
+
+    @media only screen and (max-width: 550px) {
+    width: auto;
+    margin: auto;
+    }
 }
 
 .btnPerso {
@@ -46,6 +61,10 @@ body {
   cursor: pointer;
   font-size: 2rem;
   font-family: $Police;
+  @media only screen and (max-width: 600px) {
+    font-size: 1rem;
+    }
+  
 }
 
 .btnPerso2 {
@@ -59,6 +78,9 @@ body {
   cursor: pointer;
   font-size: 2rem;
   font-family: $Police;
+  @media only screen and (max-width: 600px) {
+    font-size: 1rem;
+    }
 }
 
 .btnPerso3, .btnChoixDemarche, .btnChoixMairie {
@@ -68,7 +90,6 @@ body {
   border-radius: 2em;
   background-color: $Sitecolor2;
   cursor: pointer;
-  font-size: 1rem;
   color: white;
   margin: 0 20px 0 20px;
   transform: scale(1);
@@ -104,6 +125,7 @@ a:link, a:visited, a:hover, a:active {
   text-decoration: none;
   color: black;
 }
+
 /* ----------------------------------- Bandeau ---------------------------------------------- */
 #bandeau {
     z-index: 3;
@@ -117,6 +139,36 @@ a:link, a:visited, a:hover, a:active {
     position: absolute;
     margin-left: 70px;
     z-index: 4;
+    @media only screen and (max-width: 800px) {
+      margin-left: 15px;
+    }
+    @media only screen and (max-width: 850px) {
+      margin-left: 5px;
+    }
+}
+
+#logo.hide {
+  display: none;
+}
+
+#logoMenu {
+  z-index: 3;
+  height: 35px;
+  width: 35px;
+  position: absolute;
+  right: 25px;
+  top: 30px;
+  cursor: pointer;
+  background-image: url(Ressources/menu1.png);
+  &:hover {
+    background-position: -35px 0px;
+  }
+  @media only screen and (min-width: 768px) {
+    display:none;
+    }
+  @media only screen and (max-width: 320px) {
+    right: 0px;
+    }  
 }
 
 #navigation ul {
@@ -127,11 +179,34 @@ a:link, a:visited, a:hover, a:active {
     justify-content: space-around;
     z-index: 3;
 
+    @media only screen and (max-width: 767px) {
+      display: none;
+    }
+
 }
 
-.btn, .btnDemarche, .btnMairie {
+#navigationMobile {
+  z-index: 1;
+  background-color: white;
+  width: 100%;
+  position: absolute;
+  top: -300px;
+}
+
+#navigationMobile ul {
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+
+  @media only screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.btn {
     cursor: pointer;
-    //z-index: 3;
+    z-index: 3;
     font-family: $Police;
     font-size: 30px;
     color: black;
@@ -140,16 +215,29 @@ a:link, a:visited, a:hover, a:active {
       &:hover {
       transform: scale(1.1) 
     }
+    @media only screen and (max-width: 1200px) {
+      font-size: 25px;
     }
+}
 
 #Contact {
   margin-left: 200px;
+  @media only screen and (max-width: 1000px) {
+    margin-left: 0px;
+  }
+  @media only screen and (max-width: 768px) {
+    margin-left: 0px;
+  }
 }
 
 .btnactive {
   color: $Sitecolor2;
   border-bottom: 3px solid $Sitecolor2;
   z-index: 3;
+  @media only screen and (max-width: 768px) {
+  color: $Sitecolor2;
+  border-bottom: none;
+  }
 }
 
 .active {
@@ -159,33 +247,28 @@ a:link, a:visited, a:hover, a:active {
 
 /* ------------------------- Accueil ------------------------------------- */
 #MenuAccueil {
+
 margin-top: 130px;
 display: flex;
 justify-content: space-around;
+
+@media only screen and (max-width: 610px) {
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin: auto;
+margin-top: 100px;
+}
 
 }
 
 #AccueilPart2 {
   display: flex;
   flex-direction: column;
-}
 
-#carrouselAccueil {
-  height: 300px;
-  width: 400px;
-  border: 3px solid #F2F2F2;
-  overflow: hidden;
-}
-
-#carrouselAccueil ul {
-  width: 400%; // ---->(x photos * 100%)
-  height: 300px;
-  padding:0; margin:0;
-  list-style: none;
-}
-
-#carrouselAccueil li {
-  float: left;
+  @media only screen and (max-width: 610px) {
+    margin-top: 50px;
+    }
 }
 
 #meteo {
@@ -209,6 +292,10 @@ justify-content: space-around;
   background-color: rgba(255, 255, 255, 0.733);
   height:200px;
   width:300px;
+  @media only screen and (max-width: 610px) {
+
+    margin-top: 25px;
+    }
 }
 
 /* -------------------------------- Le Village ---------------------------- */
@@ -220,23 +307,45 @@ justify-content: space-around;
   width: 800px;
   margin: auto;
   margin-bottom: 300px;
+  @media only screen and (max-width: 800px) {
+    width: auto;
+  }
+}
+
+#village1 p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 24px;
+  @media only screen and (max-width: 600px) {
+    font-size: 18px;
+    }
 }
 
 #village2 {
-margin:0 100px 0 100px;
+  @media only screen and (max-width: 1075px) {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: -50px;
+  }
 }
 
 #village3 {
-  margin-bottom: -30px;
+  margin-bottom: 50px;
+  @media only screen and (max-width: 1075px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 #village4 {
   margin-bottom: 0px; 
+  @media only screen and (max-width: 1075px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .legende {
   font-weight: bold;
-  width: 450px;
   margin: auto;
 }
 
@@ -266,6 +375,11 @@ margin:0 100px 0 100px;
   overflow: hidden;
 }
 
+.imgCarrouselVillage {
+  width:500px;
+  height: 350px;
+}
+
 #carrouselVillage ul {
   width: 400%; // ---->(x photos * 100%)
   height: 350px;
@@ -277,37 +391,35 @@ margin:0 100px 0 100px;
   float: left;
 }
 
-#carrouselCP {
-  margin: auto;
-  width: 700px;
+.menu2Village img {
+  width:500px;
+  height: 350px;
+  @media only screen and (max-width: 768px) {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+#Maps iframe {
+  width: 600px;
   height: 450px;
-  overflow: hidden;
-  border: 3px solid #F2F2F2;
-}
-
-#carrouselCP ul {
-  width: 700%; // ---->(x photos * 100%)
-  height: 450px; //50?
-  padding:0; margin:0;
-  list-style: none;
-}
-
-#carrouselCP li {
-  float: left;
+  @media only screen and (max-width: 768px) {
+    width: 300px;
+    height: 200px;
+  }
 }
 
 /* --------------------------------- MAIRIE ------------------------------ */
 #MAIRIE {
   z-index: 0;
-  opacity: 1;
-  position: relative;
-  top: -300px;
+  display: block;
+  width: 100%;
+  overflow:hidden;
+  opacity: 0;
+  position: absolute;
+  top: -100px;
   background-color: rgb(255, 255, 255);
-  margin-top: 0px;
-  margin-bottom: -150px;
-  padding: 10px;
 }
-
 
 /* ----------------------------------- Demarches ---------------------------- */
 #DEMARCHES {
@@ -336,6 +448,15 @@ margin:0 100px 0 100px;
 #choixDemarche, #choixMairie {
   display: flex;
   justify-content: center;
+  @media only screen and (max-width: 768px) {
+    flex-direction: column;
+  }
+}
+
+.btnChoixMairie, .btnChoixDemarche {
+  width: auto;
+  margin: auto;
+  margin-bottom: 10px;
 }
 
 #menuServicePublic {
@@ -370,16 +491,18 @@ margin:0 100px 0 100px;
 
 /* ------------------------------------ Contact ----------------------------*/
 #CONTACT {
-  margin-top: 75px;
+  margin-top: 150px;
 }
 
 #formulaireContact {
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(195, 191, 191, 0.5);
     width: 500px;
     margin: auto;
     font-family: $Police;
     font-size: 30px;
+    @media only screen and (max-width: 600px) {
+      width: auto;
+      }
   }
 
 #CONTACT input, #CONTACT textarea {
@@ -391,6 +514,9 @@ margin:0 100px 0 100px;
     display: flex;
     justify-content: space-between;
     text-align: center;
+    @media only screen and (max-width: 550px) {
+      flex-direction: column;
+    }
   }
 
 .nomContact input {
@@ -405,6 +531,10 @@ margin:0 100px 0 100px;
     height: 150px;
     border: 0px;
     margin-top: 20px;
+    @media only screen and (max-width: 550px) {
+      width: auto;
+      margin: auto;
+    }
   }
 
   #ErrorMailContact.closed, #SuccessMailContact.closed {
